[tool.poetry]
name = "nft-tracker"
version = "0.1.0"
description = "Interactive Dash app to track NFT market data"
authors = ["Vikas Negi <vikas.negi10@gmail.com>"]
readme = "README.md"
packages = [{include = "nft_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.1.3"
dash = "^2.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
